# git-hooks-toolbox

./: README.md  example.worktreeinclude  post-checkout  post-merge  post-rewrite  pyproject.toml  rulesync_hook.py
.github/workflows/: tests.yml
tests/: README.md  conftest.py  test_clone_and_cross_repo.py  test_e2e_worktree.py  test_rulesync.py  test_source_detection_fallback.py  test_source_detection_pattern_mtime.py
